# durian

./: .gitignore  Dockerfile  README.md  bot.py  bot_runner.py  fly.toml  pyproject.toml  strategy.py  todo
.agent/rules/: rules.md
bot/: README.md
bot/strategies/: __init__.py  base_strategy.py  registry.py
bot/strategies/gemini_portfolio/: __init__.py  engine.py
strategies/: base_strategy.py  registry.py  sma_crossover_strategy.py
strategies/gemini_portfolio/: engine.py  strategy.py
web/: package-lock.json  package.json  uno.config.ts  vite.config.ts
web/.agent/: rules.md
web/src/: routeTree.gen.ts  shim.d.ts
web/src/components/: AnalysisChart.tsx  AuxiliaryChart.tsx  ChartLegend.tsx  FootprintChart.tsx  Header.tsx  MACDChart.tsx  MACDConfigPanel.tsx  MACDTechnicalSignals.tsx  MAChart.tsx  MovingAverageSignal.tsx  PhysicalTFFChart.tsx  Sidebar.tsx  SymbolSearch.tsx  TFFChart.tsx  TechnicalSignals.tsx  TradingViewWithIndicators.tsx
web/src/components/analysis/: AnalysisChart.tsx  AuxiliaryChart.tsx  ChartContext.tsx  (+2 more)
web/src/contexts/: ChartConfigContext.tsx  ChartContext.tsx  LegendContext.tsx  MainChartContext.tsx  OverlayDataContext.tsx
web/src/data/: yahoo.ts
web/src/routes/: __root.tsx  analysis.tsx  cot.gold.tsx  cot.ndx.tsx  cot.silver.tsx  cot.spx.tsx  cot.tsx  dom.btc.tsx  economic-calendar.tsx  futures.dom.tsx  futures.index.tsx  futures.ma.tsx  futures.tsx  gex.$symbol.tsx  gex.tsx  history.tsx  index.tsx  news.tsx  overview.tsx  spx.tsx
web/src/utils/: alphavantage-news.ts  analysis.ts  statistics.ts  yahoo-history.ts  yahoo.ts
(+17 files in other folders)
